# ingester

./: .gitignore  .prettierignore  .prettierrc  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  event.rs  main.rs  processing.rs
src/lib/: DirectoryChooser.svelte  IngestSubmitButton.svelte  ProgressLogger.svelte  copyFiles.ts  events.ts  formHandler.ts
